fix IE flex box wrap issue

--- a/src/index.css
+++ b/src/index.css
@@ -37,21 +37,6 @@ body {
 
 /* Table styles */
 
-table{
-    table-layout: fixed;
-    width: 100%;
-}
-
-th:first-child,
-td:first-child {
-    width: 20%;
-}
-
-th:nth-child(2),
-td:nth-child(2) {
-    width: 35%;
-}
-
 th.sorting-header {
     background-color: #eaeaea;
     color: #337ab7;
@@ -77,7 +62,38 @@ th.sorting-header:hover {
     }
 }
 
+@media screen and (min-width: 501px) {
+    table {
+        table-layout: fixed;
+        width: 100%;
+    }
+
+    th:first-child,
+    td:first-child {
+        width: 20%;
+    }
+
+    th:nth-child(2),
+    td:nth-child(2) {
+        width: 35%;
+    }
+}
+
 @media screen and (max-width: 500px) {
+    /* fix for IE */
+    table,
+    thead,
+    tbody {
+        display: block;
+    }
+
+    tr > th,
+    tr > td {
+        display: block;
+        width: 50%;
+    }
+    /* fix for IE */
+
 
     tr {
         border: 1px solid #ddd;
